--- a/CHANGELOG.html
+++ b/CHANGELOG.html
@@ -22,7 +22,7 @@
 <div class="content">
 <h1 style="text-align: center;">Pokémon Survivor Change Log</h1>
 
-<p style="text-align: center;">Latest update: July 16th, 2016</p>
+<p style="text-align: center;">Latest update: July 17th, 2016</p>
 
 <h2>Introduction</h2>
 
@@ -59,7 +59,7 @@
 <h3>These issues are known by the developers and are being worked on.</h3>
 
 <ul>
-<li>Nothing so far, I just need to fix the first map, and get a patch out.</li>
+<li>Immunity doll game is not working for the first map. For some reason the variables aren't registering.</li>
 </ul>
 
 <h3>These issues are known by the developers but won't be fixed.</h3>
@@ -83,10 +83,20 @@
 
 <p>These will be numbered releases that will be released when their key features are finished.</p>
 
-<h3>Version [0.0.1] Release</h3>
+<h3>Version [0.0.2] Release</h3>
 
 <ul>
-<li>When <b>I</b> actually make something, this will be released.</li>
+<li>First map completed, made script for self to teleport to the game.</li>
+</ul>
+
+<h2>[0.0.1] - 2016-07-17</h2>
+
+<h3>Added</h3>
+
+<ul>
+<li>Entire first map.</li>
+<li>A mini game in the first map. Not complete yet.</li>
+<li>New tiles and blocks to the first map.</li>
 </ul>
 
 <h2>[0.0.0] - 2016-07-16 [PLANNING PATCH]</h2>
