Added links to contributions. Also added Diego, for he is awesome.

--- a/CONTRIBUTIONS.html
+++ b/CONTRIBUTIONS.html
@@ -22,20 +22,21 @@
 <div class="content">
 <h1 style="text-align: center;">Contributors to Pokémon Survivor</h1>
 
-<p style="text-align: center;">Latest update: July 16th, 2016</p>
+<p style="text-align: center;">Latest update: July 17th, 2016</p>
 
 <h2>Credits</h2>
 
 <p>Pokémon Survivor is produced by Nonibros. However, there are other contributors, mostly in the form of providing tools. See below for a total list:</p>
 
     <ul>
-        <li><a href="http://www.pokecommunity.com/member.php?u=596277">Nonibros</a> - Made the entire game. Made the Github, this website, and the file structure for the project.</li>
+        <li><a href="http://www.pokecommunity.com/member.php?u=596277">Nonibros</a> - Made the entire game. Made the , this <a href="https://nonibros.github.io/Pokemon-Survivor/">website</a>, and the file structure for the project.</li>
         <li><a href="http://www.gamefreak.co.jp/">Game Freak</a> - Made both Firered, which is what this project is based on, and Pokémon, of course.</li>
         <li><a href="http://www.pokecommunity.com/member.php?u=126205">JPAN</a> - Credit for the save block hack as well as the Engine. Without them, I couldn't have done this at all.</li>
-        <li><a href="http://www.pokecommunity.com/member.php?u=156050">Jambo51</a> - The Flag and Variable Extension hack. That code has the same impact as JPANs Engine for this project, which is quite an honor.</li>
-        <li><a href="http://www.pokecommunity.com/member.php?u=28656">HackMew</a> - For a lot of random fixes and XSE, without which we couldn't do anything much.</li>
-        <li><a href="http://www.pokecommunity.com/member.php?u=10073">Lu-Ho</a> - Creating Advance Map. (As buggy as it is.)</li>
-        <li><a href="http://gamer2020.ga/">Gamer2020</a> - The bug fixed XSE.</li>
+        <li><a href="http://www.pokecommunity.com/member.php?u=156050">Jambo51</a> - The <a href="http://www.pokecommunity.com/showthread.php?t=302476">Flag and Variable Extension</a> hack. That code has the same impact as JPANs Engine for this project, which is quite an honor.</li>
+        <li><a href="http://www.pokecommunity.com/member.php?u=28656">HackMew</a> - For a lot of random fixes and <a href="http://www.pokecommunity.com/showthread.php?t=85025">XSE</a>, without which I couldn't do anything much.</li>
+        <li><a href="http://www.pokecommunity.com/member.php?u=10073">Lu-Ho</a> - Creating <a href="http://www.pokecommunity.com/showthread.php?t=127348">Advance Map</a>. (As buggy as it is.)</li>
+        <li><a href="http://www.pokecommunity.com/member.php?u=70562">Diegoisawesome</a> - Creating <a href="https://github.com/Diegoisawesome/GBAIntroManager">GBA Intro Manager</a>, as well as the <a href="http://www.pokecommunity.com/showthread.php?t=339343">secret sauce</a>. I also used some <a href="http://www.pokecommunity.com/showthread.php?t=333996">miscellaneous patches</a>. Thanks Diego, for being so awesome!</li>
+        <li><a href="http://gamer2020.ga/">Gamer2020</a> - The bug fixed <a href="http://gamer2020.ga/?p=83">XSE</a>.</li>
     </ul>
 
 <h2>End of File</h2>
